--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.min.css" />
     <link rel="stylesheet" href="assets/css/ion.rangeSlider.min.css" />
-
+    <link rel="stylesheet" href="./assets/css/accordion.css">
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -355,63 +355,62 @@
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 order-2 pt-5 pt-lg-0">
                             <div class="sidebar-area">
-                                <div class="widgets-searchbox">
-                                    <form id="widgets-searchbox">
-                                        <input class="input-field" type="text" placeholder="Search">
-                                        <button class="widgets-searchbox-btn" type="submit">
-                                            <i class="fa fa-search"></i>
-                                        </button>
-                                    </form>
-                                </div>
                                 <div class="widgets-area">
                                     <div class="widgets-item pt-0">
                                         <h2 class="widgets-title mb-4">Categories</h2>
-                                        <ul class="widgets-category">
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-chevron-right"></i>
-                                                    All <span>(65)</span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-chevron-right"></i>
-                                                    Bansai <span>(12)</span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-chevron-right"></i>
-                                                    House Plants <span>(22)</span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-chevron-right"></i>
-                                                    Indoor Living <span>(19)</span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-chevron-right"></i>
-                                                    Perennnials <span>(17)</span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-chevron-right"></i>
-                                                    Plant For Gift <span>(01)</span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <i class="fa fa-chevron-right"></i>
-                                                    Garden Tools <span>(12)</span>
-                                                </a>
-                                            </li>
-                                        </ul>
+                                        <div class="col">
+                                            <h2>Open <b>multiple</b></h2>
+                                            <div class="tabs">
+                                                <div class="tab">
+                                                    <input type="checkbox" id="chck1">
+                                                    <label class="tab-label" for="chck1">Голова</label>
+                                                    <div class="tab-content">
+                                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
+                                                        reiciendis!
+                                                    </div>
+                                                </div>
+                                                <div class="tab">
+                                                    <input type="checkbox" id="chck2">
+                                                    <label class="tab-label" for="chck2">Живот</label>
+                                                    <div class="tab-content">
+                                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
+                                                        reiciendis!
+                                                    </div>
+                                                </div>
+                                                <div class="tab">
+                                                    <input type="checkbox" id="chck3">
+                                                    <label class="tab-label" for="chck3">Спина</label>
+                                                    <div class="tab-content">
+                                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
+                                                        reiciendis!
+                                                    </div>
+                                                </div>
+                                                <div class="tab">
+                                                    <input type="checkbox" id="chck4">
+                                                    <label class="tab-label" for="chck4">Ноги</label>
+                                                    <div class="tab-content">
+                                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
+                                                        reiciendis!
+                                                    </div>
+                                                </div>
+                                                <div class="tab">
+                                                    <input type="checkbox" id="chck5">
+                                                    <label class="tab-label" for="chck5">Нервы</label>
+                                                    <div class="tab-content">
+                                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum,
+                                                        reiciendis!
+                                                    </div>
+                                                </div>
+                                                <div class="tab">
+                                                    <input type="checkbox" id="chck6">
+                                                    <label class="tab-label" for="chck6">Еще</label>
+                                                    <div class="tab-content">
+                                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, in!
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-
                                 </div>
 
                             </div>
