добавил картинки на сайт, следующий этап- понять как будет выглядить главная страница(непонятно что с блоками из столбцов)

--- a/cart.html
+++ b/cart.html
@@ -615,7 +615,7 @@
                                     </p>
                                 </div>
                                 <div class="blog-img img-hover-effect">
-                                    <img class="img-full" src="assets/images/blog/large-size/1-1-768x546.jpg"
+                                    <img class="img-full" src="assets/images/posts/Allergiya.jpeg"
                                         alt="Blog Image">
                                 </div>
                                 <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -649,10 +649,10 @@
                                                     <div class="product-img">
                                                         <a href="#">
                                                             <img class="primary-img"
-                                                                src="assets/images/product/medium-size/1-9-270x300.jpg"
+                                                                src="assets/images/posts/artroz1.jpeg"
                                                                 alt="Product Images">
                                                             <img class="secondary-img"
-                                                                src="assets/images/product/medium-size/1-10-270x300.jpg"
+                                                                src="assets/images/posts/artroz2-300x203.jpeg"
                                                                 alt="Product Images">
                                                         </a>
 
@@ -663,10 +663,10 @@
                                                     <div class="product-img">
                                                         <a href="#">
                                                             <img class="primary-img"
-                                                                src="assets/images/product/medium-size/1-10-270x300.jpg"
+                                                                src="assets/images/posts/astma3.jpeg"
                                                                 alt="Product Images">
                                                             <img class="secondary-img"
-                                                                src="assets/images/product/medium-size/1-11-270x300.jpg"
+                                                                src="assets/images/posts/astma5diafragma-296x300.jpeg"
                                                                 alt="Product Images">
                                                         </a>
 
@@ -677,10 +677,10 @@
                                                     <div class="product-img">
                                                         <a href="#">
                                                             <img class="primary-img"
-                                                                src="assets/images/product/medium-size/1-11-270x300.jpg"
+                                                                src="assets/images/posts/Emotsionalnye-bloki.jpeg"
                                                                 alt="Product Images">
                                                             <img class="secondary-img"
-                                                                src="assets/images/product/medium-size/1-4-270x300.jpg"
+                                                                src="assets/images/posts/Disbalans-pozvonkov-178x300.jpeg"
                                                                 alt="Product Images">
                                                         </a>
                                                     </div>
@@ -690,10 +690,10 @@
                                                     <div class="product-img">
                                                         <a href="#">
                                                             <img class="primary-img"
-                                                                src="assets/images/product/medium-size/1-7-270x300.jpg"
+                                                                src="assets/images/posts/ZHeludochno-kishechnyj-trakt.jpeg"
                                                                 alt="Product Images">
                                                             <img class="secondary-img"
-                                                                src="assets/images/product/medium-size/1-8-270x300.jpg"
+                                                                src="assets/images/posts/Zaikanie.jpeg"
                                                                 alt="Product Images">
                                                         </a>
 
