--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                             <div class="header-middle-wrap position-relative">
                                 <div class="header-contact d-none d-lg-flex">
                                     <i class="pe-7s-call"></i>
-                                    <a href="tel://+00-123-456-789">+00 123 456 789</a>
+                                    <a href="tel://+00-123-456-789">+7 (969) 20 17 000</a>
                                 </div>
 
                                 <a href="index.html" class="header-logo">
-                                    <img src="assets/images/logo/dark.png" alt="Header Logo">
+                                    <img src="assets/images/logo/LogoN.png" alt="Header Logo">
                                 </a>
 
                                 <div class="header-right">
