--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pronia - Error 404</title>
+    <title>Кинезиолог Никита Янушанец. Лечение остеохондроза, сколиоза, головных болей, аллергии, заиканий и астмы</title>
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Pronia plant store bootstrap 5 template is an awesome website template for any home plant shop.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/Logo.png" />
 
     <!-- CSS
     ============================================ -->
