--- a/login-register.html
+++ b/login-register.html
@@ -9,12 +9,17 @@
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Pronia plant store bootstrap 5 template is an awesome website template for any home plant shop.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo/Logo.png" />
-    <!-- fancyBox -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/logo/site.webmanifest">
+    <link rel="mask-icon" href="assets/images/logo/safari-pinned-tab.svg" color="#0ea673">
+    <link rel="shortcut icon" href="assets/images/logo/favicon.ico">
+    <meta name="msapplication-TileColor" content="#0ea673">
+    <meta name="msapplication-config" content="assets/images/logo/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-    <!-- CSS
-    ============================================ -->
+
 
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
@@ -71,13 +76,13 @@
                                 <nav class="main-nav">
                                     <ul>
                                         <li class="drop-holder">
-                                            <a href="index.php">Home</a>
+                                            <a href="index.php">HOME</a>
                                         </li>
                                         <li class="drop-holder">
                                             <a href="blog.php">CATALOG</a>
                                         </li>
                                         <li>
-                                            <a href="contact.php">Contact Us</a>
+                                            <a href="contact.php">CONTACT US</a>
                                         </li>
                                     </ul>
                                 </nav>
