обновил дизайн: чуть изменил хэдер + добавил логотип + изменил главный слайдер

--- a/blog.html
+++ b/blog.html
@@ -601,7 +601,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -619,7 +619,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -637,7 +637,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -655,7 +655,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
