--- a/blog2.html
+++ b/blog2.html
@@ -602,7 +602,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -620,7 +620,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -638,7 +638,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -656,7 +656,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца, широкая вверху и суженная внизу, располагается сбоку от срединной линии. Обе прямые мышцы отделены друг от друга белой линией живота.</p>
+                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
