--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@ include('bd.html');
                                             <a href="blog.html">Обучение</a>
                                         </li>
                                         <li class="drop-holder">
-                                            <a href="blog.html">Обучение2</a>
+                                            <a href="blog2.html">Обучение2</a>
                                         </li>
                                         <li class="drop-holder">
-                                            <a href="blog.html">Обучение3</a>
+                                            <a href="blog3.html">Обучение3</a>
                                         </li>
                                         <li>
                                             <a href="contact.html">Контакты</a>
