сделал правки текста, фотографии и оставил блок3, далее буду делать меню поиска и придумывать дизайн с фото

--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,7 @@
     </div>
     <div class="main-wrapper">
 
+        <!-- Begin Main Header Area -->
         <header class="main-header-area">
 
             <!-- <div class="header-top bg-pronia-primary d-none d-lg-block">
@@ -349,7 +350,7 @@
             <div class="blog-area section-space-y-axis-100">
                 <div class="container">
                     <div class="row item-category">
-                        <div class="col-xl-5 col-lg-4 order-2 pt-5 pt-lg-0">
+                        <div class="col-xl-4 col-lg-4 order-2 pt-5 pt-lg-0">
                             <div class="sidebar-area">
                                 <div class="widgets-area">
                                     <div class="widgets-item pt-0">
@@ -363,9 +364,9 @@
                                                     <div class="tab-content">
                                                         <ul>
 
-                                                            <li><a href="cart.html?id=1">Изучение тестирования отдельных мышц.</a></li>
-                                                            <li><a href="cart.html?id=2">Изучение тестирования отдельных мышц.</a></li>
-                                                            <li><a href="cart.html?id=3">Изучение тестирования отдельных мышц.</a></li>
+                                                            <li><a href="cart.html?id=1">статья 1 читать</a></li>
+                                                            <li><a href="cart.html?id=2">статья 2 читать</a></li>
+                                                            <li><a href="cart.html?id=3">статья 3 читать</a></li>
                                                             <li><a href="#">статья 4 читать</a></li>
                                                             <li><a href="#">статья 5 читать</a></li>
                                                             <li><a href="#">статья 6 читать</a></li>
@@ -592,7 +593,7 @@
 
                             </div>
                         </div>
-                        <div class="col-xl-6 col-lg-7 order-1">
+                        <div class="col-xl-7 col-lg-8 order-1">
                             <div class="grid-item mx-auto">
                                 <div class="photo-item border">
                                     <div class="blog-item">
@@ -601,7 +602,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
+                                            <p class="short-desc mb-7"></p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -619,7 +620,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
+                                            <p class="short-desc mb-7"></p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -637,7 +638,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
+                                            <p class="short-desc mb-7"></p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
@@ -655,7 +656,7 @@
                                             <h2 class="title">
                                                 <a href="cart.html">Тема</a>
                                             </h2>
-                                            <p class="short-desc mb-7">Прямая мышца живота — парная плоская длинная лентовидной формы мышца.</p>
+                                            <p class="short-desc mb-7"></p>
                                         </div>
                                         <div class="blog-img img-hover-effect">
                                             <a href="cart.html">
