--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,11 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кинезиолог Никита Янушанец. Лечение остеохондроза, сколиоза, головных болей, аллергии, заиканий и астмы</title>
+    <title>Кинезиолог Никита Янушанец. Лечение остеохондроза, сколиоза, головных болей, аллергии, заиканий и астмы
+    </title>
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="Pronia plant store bootstrap 5 template is an awesome website template for any home plant shop.">
+    <meta name="description"
+        content="Pronia plant store bootstrap 5 template is an awesome website template for any home plant shop.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png">
@@ -79,8 +81,7 @@
                             <div class="header-middle-wrap position-relative">
                                 <div class="header-contact d-none d-lg-flex">
                                     <!-- <i class="pe-7s-call"></i> -->
-                                    <a href="index.html"><img src="./assets/images/banner/logo.png"
-                                            alt=""></a>
+                                    <a href="index.html"><img src="./assets/images/banner/logo.png" alt=""></a>
                                 </div>
                                 <nav class="main-nav">
                                     <ul>
@@ -343,9 +344,9 @@
             </div>
             <div class="global-overlay"></div>
         </header>
-      
+
         <main class="main-content">
-          
+
             <div class="contact-form-area section-space-y-axis-100">
                 <div class="container">
                     <div class="row">
@@ -353,7 +354,8 @@
                             <div class="contact-wrap">
                                 <div class="contact-info text-white">
                                     <h2 class="contact-title">Контактная информация</h2>
-                                    <p class="contact-desc">Свяжитесь с нами если остались вопросы или заполните анкету и мы свяжемся с вами.
+                                    <p class="contact-desc">Свяжитесь с нами если остались вопросы или заполните анкету
+                                        и мы свяжемся с вами.
                                     </p>
                                     <ul class="contact-list">
                                         <li>
@@ -370,25 +372,32 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <form id="contact-form" class="contact-form" action="https://htmlmail.hasthemes.com/mamunur/pronia.html">
+                                <form id="contact-form" class="contact-form"
+                                    action="https://htmlmail.hasthemes.com/mamunur/pronia.html">
                                     <div class="group-input mb-5">
                                         <div class="form-field me-lg-30 mb-35 mb-lg-0">
-                                            <input type="text" name="con_firstName" id="con_firstName" placeholder="Имя" class="input-field" autocomplete="off">
+                                            <input type="text" name="con_firstName" id="con_firstName" placeholder="Имя"
+                                                class="input-field" autocomplete="off">
                                         </div>
                                     </div>
                                     <div class="group-input mb-35">
                                         <div class="form-field me-lg-30 mb-35 mb-lg-0">
-                                            <input type="text" name="con_phone" id="con_phone" placeholder="Телефон" class="input-field" autocomplete="off">
+                                            <input type="text" name="con_phone" id="con_phone" placeholder="Телефон"
+                                                class="input-field" autocomplete="off">
                                         </div>
                                         <div class="form-field">
-                                            <input type="text" name="con_email" id="con_email" placeholder="Email" class="input-field" autocomplete="off">
+                                            <input type="text" name="con_email" id="con_email" placeholder="Email"
+                                                class="input-field" autocomplete="off">
                                         </div>
                                     </div>
                                     <div class="form-field mb-5">
-                                        <textarea name="con_message" id="con_message" placeholder="Сообщение" class="textarea-field"></textarea>
+                                        <textarea name="con_message" id="con_message" placeholder="Сообщение"
+                                            class="textarea-field"></textarea>
                                     </div>
                                     <div class="contact-button-wrap">
-                                        <button type="submit" value="submit" class="btn btn btn-custom-size xl-size btn-pronia-primary" name="submit">Отправить</button>
+                                        <button type="submit" value="submit"
+                                            class="btn btn btn-custom-size xl-size btn-pronia-primary"
+                                            name="submit">Отправить</button>
                                         <p class="form-messege mb-0"></p>
                                     </div>
                                 </form>
@@ -399,8 +408,8 @@
             </div>
             <div class="contact-with-map">
                 <div class="contact-map">
-                    <iframe class="contact-map-size" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830869428!2d-74.119763973046!3d40.69766374874431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1613802584124!5m2!1sen!2sbd" allowfullscreen="" loading="lazy">
-                    </iframe>
+                    <script type="text/javascript" charset="utf-8" async
+                        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A815cdaf3989f7efbc69d270c66fd18339f775fcf171832de8f444ea94ae3d9a9&amp;width=100%25&amp;height=596&amp;lang=ru_RU&amp;scroll=true"></script>
                 </div>
             </div>
         </main>
