--- a/index.html
+++ b/index.html
@@ -56,27 +56,6 @@ include('bd.html');
 
 
         <header class="main-header-area">
-
-            <!-- <div class="header-top bg-pronia-primary d-none d-lg-block">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-11">
-                            <div class="header-top-left">
-                                <span class="pronia-offer">
-                                    Привет, USER!</span>
-                            </div>
-                        </div>
-                        <div class="col-lg-1">
-                            <span title="LogOut">
-                                <a href="#" class="search-btn bt bt-logout">
-                                    <i class="pe-7s-right-arrow"></i>
-                                </a>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
             <div class="header-middle py-30">
                 <div class="container">
 
@@ -84,9 +63,7 @@ include('bd.html');
                         <div class="col-lg-12">
                             <div class="header-middle-wrap position-relative">
                                 <div class="header-contact d-none d-lg-flex">
-                                    <!-- <i class="pe-7s-call"></i> -->
-                                    <a href="index.html"><img src="./assets/images/banner/logo.png"
-                                            alt=""></a>
+                                    <a href="index.html"><img src="./assets/images/banner/logo.png" alt=""></a>
                                 </div>
                                 <nav class="main-nav">
                                     <ul>
@@ -95,12 +72,6 @@ include('bd.html');
                                         </li>
                                         <li class="drop-holder">
                                             <a href="blog.html">Обучение</a>
-                                        </li>
-                                        <li class="drop-holder">
-                                            <a href="blog2.html">Обучение2</a>
-                                        </li>
-                                        <li class="drop-holder">
-                                            <a href="blog3.html">Обучение3</a>
                                         </li>
                                         <li>
                                             <a href="contact.html">Контакты</a>
@@ -357,31 +328,31 @@ include('bd.html');
         </header>
 
         <div class="slider-area">
-
-
             <div class="swiper-container main-slider swiper-arrow with-bg_white">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide animation-style-01">
-                        <!-- <div class="slide-inner style-1 bg-height" style="background-image:url('./assets/images/banner/bg-imag.png');"> -->
-                        <div class="slide-inner style-1 bg-height" style="background: #F1F5F7;">
+                    <div class="swiper-slide">
+
+
+                        <div class="py-5 style-1 bg-height" style="background: #F1F5F7;">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-6 order-2 order-lg-1 align-self-center">
                                         <div class="slide-content text-black">
-                                            <!-- <span class="offer">Здравствуйте! Я, кандидат, медицинских наук</span> -->
-                                            <p class="short-desc">Здравствуйте, я кандидат медицинских наук</p>
+                                            <p class="short-desc">Здравствуйте, приветствую вас!</p>
 
                                             <h2 class="title">Янушанец
                                                 Никита Юрьевич</h2>
-                                            <p class="short-desc">Приветствую вас в своей клинике</p>
+                                            <!-- <p class="short-desc"></p> -->
 
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-8 offset-md-2 offset-lg-0 order-1 order-lg-2">
                                         <div class="inner-img">
                                             <div class="scene fill">
-                                                <div class="expand-width" data-depth="0.2">
-                                                    <img src="./assets/images/banner/author (1).png" alt="">
+                                                <div class="expand-width" data-depth="0.2" style="display: flex;
+                                                align-items: center;
+                                                justify-content: center;">
+                                                    <img src="./assets/images/banner/author (1).png" alt="" class="author-logo">
                                                 </div>
                                             </div>
                                         </div>
@@ -390,38 +361,8 @@ include('bd.html');
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide animation-style-01">
-                        <div class="slide-inner style-1 bg-height" style="background: #F1F5F7;">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-6 order-2 order-lg-1 align-self-center">
-                                        <div class="slide-content text-black">
-                                            <p class="short-desc">Здравствуйте, я кандидат медицинских наук</p>
-                                            <h2 class="title">Янушанец
-                                                Никита Юрьевич</h2>
-                                            <p class="short-desc">Стаж работы
-                                                более 10 лет</p>
-
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-8 offset-md-2 offset-lg-0 order-1 order-lg-2">
-                                        <div class="inner-img">
-                                            <div class="scene fill">
-                                                <div class="expand-width" data-depth="0.2">
-                                                    <img src="./assets/images/banner/author (1).png" alt="Inner Image">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                 
                 </div>
-                <div class="swiper-pagination d-md-none"></div>
-
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
             </div>
 
         </div>
